[gd_scene load_steps=2 format=2]

[ext_resource path="res://Core/ConnectToServerScreen.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectToServerButton" type="Button" parent="."]
margin_left = 403.0
margin_top = 545.0
margin_right = 799.0
margin_bottom = 654.0
text = "Connect"

[node name="IPAddressLabel" type="Label" parent="."]
margin_left = 224.0
margin_top = 62.0
margin_right = 314.0
margin_bottom = 93.0
text = "IP Address:"

[node name="PortLabel" type="Label" parent="."]
margin_left = 230.0
margin_top = 147.0
margin_right = 307.0
margin_bottom = 168.0
text = "Port:"

[node name="IPAddressLineEdit" type="LineEdit" parent="."]
margin_left = 371.0
margin_top = 57.0
margin_right = 837.0
margin_bottom = 81.0
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortLineEdit" type="LineEdit" parent="."]
margin_left = 376.0
margin_top = 142.0
margin_right = 839.0
margin_bottom = 166.0
text = "4200"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 359.0
margin_top = 243.0
margin_right = 830.0
margin_bottom = 447.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1
valign = 1
